--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Install mypy stubs
+        run: mypy --install-types
+
       - name: Run mypy
         run: mypy .
 
